<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="intro">RentEase\n\n Your Ride To \n Freedom</string>
    <string name="get_started">\t\t Get  Started \t\t</string>
    <string name="account_setting">Account Setting</string>
    <string name="add_new_car">Add New Car</string>
    <string name="orders_record">Orders Record</string>
    <string name="my_reservation">My Reservation</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="nbrand">\nBrand: \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="toyota">Toyota</string>
    <string name="honda">Honda</string>
    <string name="ford">Ford</string>

    <!--    _____________________ **SHAHD** ________________________________-->
    <string name="select_car_make">Select Car Make</string>
    <string name="select_car_model">Select Car Model</string>
    <string name="select_year">Select Year of Manufacture</string>
    <!--    <string name="year_manufacture_hint">Year of Manufacture (e.g., 2022)</string>-->
    <string name="vin_hint"><font color="#beffdd">VIN</font></string>
    <string name="specifications_hint"><font color="#beffdd">Specifications</font></string>
    <string name="select_availability_status">Select Availability Status</string>
    <string name="select_picture">Select Picture</string>
    <string name="numberOfSeats"><font color="#beffdd">Number Of Seats</font></string>
    <string name="fuelType"><font color="#beffdd">Fuel Type</font></string>
    <string name="transmissionSpinner"><font color="#beffdd">Transmission Type</font></string>
    <!--    <string name="contactUsIntro">-->
    <!--        <font color="#24282f">-->
    <!--            We'd love to hear from you!\n-->
    <!--            Fill out the form below and we'll\n-->
    <!--            get back to you as soon as possible! :)-->
    <!--        </font>-->
    <!--    </string>-->
    <!--    <string name="contactUsSubjectHint">"  Inquiry about Services"</string>-->
    <!--    <string name="contactUsMessageHint">"    Hi there!\n    I'm interested in your\n    services. Please provide\n    more info.\n    Thanks"</string>-->

    <string name="open">Open</string>
    <string name="close">Close</string>
    ]    <!--    _____________________ **SHAHD** ________________________________-->

    <string-array name="transmission_array">
        <item>Automatic</item>
        <item>Gear</item>
    </string-array>
    <string-array name="fuel_type_array">
        <item>Diesel</item>
        <item>Electric</item>
        <item>Gasoline</item>
    </string-array>

</resources>